# domain-lib

./: Cargo.toml
src/cache/: await_verification.rs  mod.rs
src/db/: deezer.rs  shared.rs  soundcloud.rs  user.rs
src/errors/: app_error.rs  create_err_json.rs  create_json_error_str.rs  define_app_error.rs  email.rs  error_wrapper.rs  mod.rs
src/errors/auth/: coockie_error.rs  cookie_error.rs  jwt_error.rs  mod.rs  problematic_fields_error.rs
src/errors/cache/: mod.rs  session_errors.rs  user_errors.rs  verify_user_errors.rs
src/errors/db/: mod.rs  session.rs  sqlx_error.rs  user.rs
src/errors/music_services/: deezer_api_error.rs  mod.rs  soundcloud_api_error.rs
src/models/: mod.rs
src/models/cache/: await_verification.rs  mod.rs  user_verify_result.rs
src/models/db/: deezer.rs  mod.rs  soundcloud.rs  user.rs
src/models/music_api/: album.rs  artist.rs  mod.rs  playlist.rs  search_results.rs  services.rs  track.rs  user.rs
