[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
redis = "1.1.0"
serde = "1.0.228"
sqlx = "0.8.6"
uuid = "1.18.1"
axum = "0.8.6"
thiserror = "2.0.17"
lettre = "0.11.19"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
password-hash = "0.6.0"
reqwest = "0.13.2"
url = "2.5.7" # bcks argon2 v."0.5.3" rely on this lib
serde_json = "1.0.145"
tokio = "1.48.0"
